29-04-2015 6.1.30
- Task start time is now optional
- IMPORTANT: z-push 2.2.1 support. Upgrade z-push too after this upgrade!
- Wrong custom field function result in rare cases
- Permissions for calendar categories on upgrade are set to owner now
- Changed the calendar import success message to an info dialog instead of warning.
- Files: Added username, musername ans locked by to file properties dialog
- Zpushadmin: Fixed notice error with defining version file multiple times
- Removed row limit from visible groups in the User dialog's permissions tab
- Tickets: Fixed display problem with  the status combo in the message dialog
- Tickets: fixed problem with comments "browse" button in the display panel
- Fix sort order by name in addresslist contacts
- Email: Fixed problem with "label" column when changing account.
- Tickets: Added total ticket count to ticket statusses

13-04-2015 6.1.29
- Billing generated invoice numbers can have the year prefixed with 2 digits as well using lowercase %y
- Sending Newsletters will not remove spaces in encoded characters
- Projects/Start page: Fixed status filter problem in the projects startpage widget.
- Set session cookie to secure on SSL connections
- Calendar: Exception on the first day of the recurrence didn't work
- Link of second email reply not automatically linked
- Tickets: Fixed html encoding problem for type combobox in the ticket dialog
- Projects: Added contracts functionality for income.
- Comments: added category column in grid
- Tickets: fixed issue when creating invoices from tickets
- Smarter reminder import for events and tasks
- Don't stop importing on large vevent objects
- Export error in tasks when custom fields module is not installed
- private flag synced with caldav
- Icalendar export ordered by start time to avoid recurring event problems.
- Disable copy on calendar invites
- delete exception on all day event not working for caldav