@@ -11,11 +11,10 @@ class GroupController extends \GO\Base\Controller\AbstractJsonController{
 		
 		$store = new \GO\Base\Data\DbStore('GO\Base\Model\Group', $columnModel, $params);
 		$store->defaultSort = array('name');
-		$store->multiSelectable('users-groups-panel');
+		$store->multiSelectable('users-groups-panel',null,'',array(),false);
 		
 		echo $this->renderStore($store);
 		
 	}
 	
 }
-?>
